# experiment-engine

./: .gitignore  ADAPTERS.md  ARCHITECTURE.md  TEACHING.md  notes.md  project_context.md  pyproject.toml  requirements.txt
assets/: tasks.csv  tasks.json  tasks.yaml  words-practice-danger.csv
assets/instructions/: main.yaml  practice.yaml
assets/practice/: practice.json
assets/subjects/: subj-001.json  subj-999.json
mcj/: main.py
mcj/components/: feedback.py  fixation.py  instructions.py  question_text.py  typed_stim.py
mcj/config/: experiment.py  paths.py  schema.py
mcj/dev/: scripts.py  session_info.py
mcj/helpers/: manage_paths.py  quit.py
mcj/instructions/: display.py  loader.py  schema.py
mcj/io/: loggers.py
mcj/plans/: common.py
mcj/routines/: emitters.py  instructions.py  practice_instructions.py
mcj/runtime/: backend.py  cedrus.py  config_types.py  context.py  display_primitives.py  display_profile.py  emitter_factory.py  emitters.py  end_reasons.py  environments.py  events.py  exceptions.py  execution.py  ids.py  input.py  input_adapter.py  input_config.py  input_events.py  input_types.py  keyboard.py  mapping.py  modes.py  outcomes.py  profiles.py  recorders.py  responses.py  roles.py  sceens.py  scripted-laptop.py  scripted.py  session.py  session_context.py  session_info.py  setup.py  setup_types.py  states.py  synchronization.py  tasks.py  termination.py  time.py  (+1 more)
mcj/stimuli/: loader.py  schema.py
scripts/: test_cedrus_adapter_with_lumina.py  test_cedrus_adapter_with_mock.py  test_psychopy_adapter.py  test_simulation.py
(+48 files in other folders)
